--- a/pppppp/View/AuthView/SignInWithApple/SignInWithAppleView.storyboard
+++ b/pppppp/View/AuthView/SignInWithApple/SignInWithAppleView.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FMb-IX-akA">
-                                <rect key="frame" x="32" y="682" width="326" height="48"/>
+                                <rect key="frame" x="32" y="690" width="326" height="48"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="gmm-3u-05W"/>
@@ -37,7 +37,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlK-eS-eaB">
-                                <rect key="frame" x="38" y="746" width="314" height="33.333333333333371"/>
+                                <rect key="frame" x="38" y="754" width="314" height="33.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="envelope.fill" catalog="system" title="Sign in with Email(Beta User Only)" imagePadding="8">
                                     <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="16"/>
@@ -45,6 +45,20 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="sceneEmailSignInButton" destination="Y6W-OH-hqX" eventType="touchUpInside" id="QpR-5k-I4Q"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdW-pE-xMT">
+                                <rect key="frame" x="254" y="790" width="104" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="104" id="MvX-DO-Nj5"/>
+                                    <constraint firstAttribute="height" constant="20" id="pGI-8d-RDk"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Privacy Policy">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="12"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="privacyPolicyButton" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zY8-pR-APc"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -56,15 +70,18 @@
                             <constraint firstItem="FMb-IX-akA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="32" id="Lm3-Kv-drU"/>
                             <constraint firstItem="Pak-yg-FHv" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="NXd-J3-d9f"/>
                             <constraint firstItem="xlK-eS-eaB" firstAttribute="top" secondItem="FMb-IX-akA" secondAttribute="bottom" constant="16" id="WUE-tG-M9E"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zdW-pE-xMT" secondAttribute="trailing" constant="32" id="aAS-ye-iln"/>
                             <constraint firstItem="xlK-eS-eaB" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="adP-cx-dgB"/>
                             <constraint firstItem="Qqn-NF-m7a" firstAttribute="top" secondItem="Pak-yg-FHv" secondAttribute="bottom" id="dIp-bU-cn4"/>
                             <constraint firstAttribute="trailing" secondItem="Qqn-NF-m7a" secondAttribute="trailing" constant="-39" id="eKT-sY-jKc"/>
                             <constraint firstItem="Qqn-NF-m7a" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="-39" id="pGk-Yz-EZp"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="FMb-IX-akA" secondAttribute="bottom" constant="80" id="qSH-gE-wn0"/>
+                            <constraint firstItem="zdW-pE-xMT" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="qFT-SQ-ntl"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="FMb-IX-akA" secondAttribute="bottom" constant="72" id="qSH-gE-wn0"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="AppleLoginButtonView" destination="FMb-IX-akA" id="Em4-Ub-oXn"/>
+                        <outlet property="privacyPolicyButtonLayout" destination="zdW-pE-xMT" id="uOM-3T-MyZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
