--- a/pppppp/View/OnboardingView/OnboardingView1.storyboard
+++ b/pppppp/View/OnboardingView/OnboardingView1.storyboard
@@ -23,19 +23,19 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="友達と" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jzw-zM-QV5">
-                                <rect key="frame" x="16" y="558" width="120" height="48"/>
+                                <rect key="frame" x="16" y="574" width="120" height="48"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="健康に関する" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNy-6u-mGD">
-                                <rect key="frame" x="16" y="606" width="242" height="48"/>
+                                <rect key="frame" x="16" y="622" width="242" height="48"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="努力ポイントを共有" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IJM-cp-9Z3">
-                                <rect key="frame" x="16" y="654" width="363" height="48"/>
+                                <rect key="frame" x="16" y="670" width="363" height="48"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -54,28 +54,28 @@
                                     <action selector="nextButton:" destination="1sg-Pi-Aeb" eventType="touchUpInside" id="v3P-IF-0bj"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding1" translatesAutoresizingMaskIntoConstraints="NO" id="tyS-LQ-OWG">
-                                <rect key="frame" x="-649" y="-65" width="1713" height="785"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboardingImage1" translatesAutoresizingMaskIntoConstraints="NO" id="tyS-LQ-OWG">
+                                <rect key="frame" x="-341" y="-482" width="1034" height="1453"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="tGI-rv-4XK"/>
                         <color key="backgroundColor" red="0.070588235289999995" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="tyS-LQ-OWG" firstAttribute="top" secondItem="Iud-yC-ACo" secondAttribute="top" constant="-482" id="2Wu-dV-KXF"/>
+                            <constraint firstAttribute="trailing" secondItem="tyS-LQ-OWG" secondAttribute="trailing" constant="-279" id="6jo-Sb-UkX"/>
                             <constraint firstAttribute="bottom" secondItem="xdM-x7-Qyf" secondAttribute="bottom" id="78f-Hy-Xhk"/>
                             <constraint firstItem="gNy-6u-mGD" firstAttribute="leading" secondItem="tGI-rv-4XK" secondAttribute="leading" constant="16" id="7id-ft-kKS"/>
                             <constraint firstItem="IJM-cp-9Z3" firstAttribute="leading" secondItem="tGI-rv-4XK" secondAttribute="leading" constant="16" id="7wf-S1-f7y"/>
                             <constraint firstItem="gNy-6u-mGD" firstAttribute="top" secondItem="jzw-zM-QV5" secondAttribute="bottom" id="AEd-vn-mJB"/>
-                            <constraint firstItem="xdM-x7-Qyf" firstAttribute="leading" secondItem="Iud-yC-ACo" secondAttribute="leading" id="Dkg-bG-vkJ"/>
-                            <constraint firstItem="xdM-x7-Qyf" firstAttribute="trailing" secondItem="Iud-yC-ACo" secondAttribute="trailing" id="GFx-78-lea"/>
-                            <constraint firstItem="tyS-LQ-OWG" firstAttribute="top" secondItem="Iud-yC-ACo" secondAttribute="top" constant="-65" id="HXw-8a-4nS"/>
+                            <constraint firstAttribute="bottom" secondItem="tyS-LQ-OWG" secondAttribute="bottom" constant="-75" id="HSS-Xa-1hj"/>
+                            <constraint firstItem="tGI-rv-4XK" firstAttribute="trailing" secondItem="xdM-x7-Qyf" secondAttribute="trailing" id="MCc-ej-5j3"/>
                             <constraint firstItem="tGI-rv-4XK" firstAttribute="bottom" secondItem="yoK-BG-4t0" secondAttribute="bottom" constant="56" id="Nmg-q5-pCi"/>
-                            <constraint firstItem="tyS-LQ-OWG" firstAttribute="leading" secondItem="Iud-yC-ACo" secondAttribute="leading" constant="-649" id="OQD-SY-ZRX"/>
                             <constraint firstItem="tGI-rv-4XK" firstAttribute="trailing" secondItem="yoK-BG-4t0" secondAttribute="trailing" constant="40" id="Y48-Xv-ri8"/>
-                            <constraint firstAttribute="trailing" secondItem="tyS-LQ-OWG" secondAttribute="trailing" constant="-650" id="ae7-Rl-5xE"/>
-                            <constraint firstItem="yoK-BG-4t0" firstAttribute="top" secondItem="IJM-cp-9Z3" secondAttribute="bottom" constant="40" id="ecN-20-cGF"/>
-                            <constraint firstItem="yoK-BG-4t0" firstAttribute="top" secondItem="tyS-LQ-OWG" secondAttribute="bottom" constant="22" id="khm-CX-f6Z"/>
+                            <constraint firstItem="yoK-BG-4t0" firstAttribute="top" secondItem="IJM-cp-9Z3" secondAttribute="bottom" constant="24" id="ecN-20-cGF"/>
                             <constraint firstItem="jzw-zM-QV5" firstAttribute="leading" secondItem="tGI-rv-4XK" secondAttribute="leading" constant="16" id="lJY-yt-HKK"/>
                             <constraint firstItem="IJM-cp-9Z3" firstAttribute="top" secondItem="gNy-6u-mGD" secondAttribute="bottom" id="m5v-NT-5s3"/>
+                            <constraint firstItem="tyS-LQ-OWG" firstAttribute="leading" secondItem="Iud-yC-ACo" secondAttribute="leading" constant="-341" id="wMp-yw-wEL"/>
+                            <constraint firstItem="xdM-x7-Qyf" firstAttribute="leading" secondItem="tGI-rv-4XK" secondAttribute="leading" id="wNy-NL-inb"/>
                         </constraints>
                     </view>
                     <connections>
@@ -90,6 +90,6 @@
     <resources>
         <image name="arrow.right" catalog="system" width="128" height="95"/>
         <image name="gradation" width="390" height="437"/>
-        <image name="onboarding1" width="1548" height="1596"/>
+        <image name="onboardingImage1" width="5240" height="5405"/>
     </resources>
 </document>
