--- a/pppppp/View/OnboardingView/OnboardingView2.storyboard
+++ b/pppppp/View/OnboardingView/OnboardingView2.storyboard
@@ -23,7 +23,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ccs-qe-bNr">
-                                <rect key="frame" x="16" y="522" width="240" height="48"/>
+                                <rect key="frame" x="16" y="538" width="240" height="48"/>
                                 <string key="text">運動・歩数を
 </string>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="40"/>
@@ -31,7 +31,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZHe-oB-JIA">
-                                <rect key="frame" x="16" y="570" width="363" height="48"/>
+                                <rect key="frame" x="16" y="586" width="363" height="48"/>
                                 <string key="text">増やしてポイントを
 </string>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
@@ -39,7 +39,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="集めよう" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yDb-M8-rQH">
-                                <rect key="frame" x="16" y="618" width="161" height="48"/>
+                                <rect key="frame" x="16" y="634" width="161" height="48"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -70,8 +70,8 @@
                                     <action selector="backButton:" destination="UOt-zi-CBt" eventType="touchUpInside" id="kim-dg-9GP"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding2" translatesAutoresizingMaskIntoConstraints="NO" id="xBN-vf-RxM">
-                                <rect key="frame" x="-127" y="35" width="621" height="707"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboardingImage2" translatesAutoresizingMaskIntoConstraints="NO" id="xBN-vf-RxM">
+                                <rect key="frame" x="-181" y="-91" width="797" height="935"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pjo-t4-ZnU"/>
@@ -79,21 +79,21 @@
                         <constraints>
                             <constraint firstItem="yDb-M8-rQH" firstAttribute="top" secondItem="ZHe-oB-JIA" secondAttribute="bottom" id="3lr-aE-tIY"/>
                             <constraint firstAttribute="bottom" secondItem="RLV-jW-ZVI" secondAttribute="bottom" id="ADM-a1-Nc2"/>
+                            <constraint firstItem="xBN-vf-RxM" firstAttribute="leading" secondItem="leq-bj-Sje" secondAttribute="leading" constant="-181" id="AOq-bb-hBI"/>
                             <constraint firstItem="ZHe-oB-JIA" firstAttribute="top" secondItem="Ccs-qe-bNr" secondAttribute="bottom" id="Ad4-3W-uqC"/>
                             <constraint firstItem="pjo-t4-ZnU" firstAttribute="bottom" secondItem="FHt-Zd-pG3" secondAttribute="bottom" constant="40" id="Baj-sO-TV3"/>
+                            <constraint firstItem="xBN-vf-RxM" firstAttribute="top" secondItem="leq-bj-Sje" secondAttribute="top" constant="-91" id="DN9-gY-wAb"/>
                             <constraint firstItem="pjo-t4-ZnU" firstAttribute="trailing" secondItem="cH1-5l-5wP" secondAttribute="trailing" constant="40" id="J3J-vb-SHK"/>
-                            <constraint firstItem="pjo-t4-ZnU" firstAttribute="bottom" secondItem="xBN-vf-RxM" secondAttribute="bottom" constant="68" id="b1G-88-wde"/>
+                            <constraint firstAttribute="trailing" secondItem="xBN-vf-RxM" secondAttribute="trailing" constant="-226" id="Qza-nf-JTO"/>
                             <constraint firstItem="Ccs-qe-bNr" firstAttribute="leading" secondItem="pjo-t4-ZnU" secondAttribute="leading" constant="16" id="dYH-MM-z1Y"/>
                             <constraint firstItem="yDb-M8-rQH" firstAttribute="leading" secondItem="pjo-t4-ZnU" secondAttribute="leading" constant="16" id="eJz-If-oLs"/>
-                            <constraint firstItem="xBN-vf-RxM" firstAttribute="leading" secondItem="leq-bj-Sje" secondAttribute="leading" constant="-127" id="esb-n3-OCg"/>
+                            <constraint firstAttribute="bottom" secondItem="xBN-vf-RxM" secondAttribute="bottom" id="eMQ-Lx-XHZ"/>
                             <constraint firstItem="pjo-t4-ZnU" firstAttribute="bottom" secondItem="cH1-5l-5wP" secondAttribute="bottom" constant="40" id="gTO-0T-bRZ"/>
-                            <constraint firstAttribute="trailing" secondItem="xBN-vf-RxM" secondAttribute="trailing" constant="-104" id="knb-Or-kvh"/>
                             <constraint firstItem="RLV-jW-ZVI" firstAttribute="leading" secondItem="leq-bj-Sje" secondAttribute="leading" id="lGv-JO-ArT"/>
                             <constraint firstAttribute="trailing" secondItem="RLV-jW-ZVI" secondAttribute="trailing" id="pPj-a6-FGI"/>
-                            <constraint firstItem="xBN-vf-RxM" firstAttribute="top" secondItem="leq-bj-Sje" secondAttribute="top" constant="35" id="pVJ-58-QJz"/>
                             <constraint firstItem="ZHe-oB-JIA" firstAttribute="leading" secondItem="pjo-t4-ZnU" secondAttribute="leading" constant="16" id="rU3-NI-Fi1"/>
                             <constraint firstItem="FHt-Zd-pG3" firstAttribute="leading" secondItem="pjo-t4-ZnU" secondAttribute="leading" constant="40" id="rVc-bb-ThU"/>
-                            <constraint firstItem="cH1-5l-5wP" firstAttribute="top" secondItem="yDb-M8-rQH" secondAttribute="bottom" constant="40" id="s3M-Dj-t6i"/>
+                            <constraint firstItem="cH1-5l-5wP" firstAttribute="top" secondItem="yDb-M8-rQH" secondAttribute="bottom" constant="24" id="s3M-Dj-t6i"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="LtX-hF-weW"/>
@@ -111,6 +111,6 @@
         <image name="arrow.left" catalog="system" width="128" height="95"/>
         <image name="arrow.right" catalog="system" width="128" height="95"/>
         <image name="gradation" width="390" height="437"/>
-        <image name="onboarding2" width="1404" height="1428"/>
+        <image name="onboardingImage2" width="4045" height="5545"/>
     </resources>
 </document>
